feat(authenthication): bycrptjs based authentication
