# server/src/models/User.model.ts
@@ -1,4 +1,5 @@
 import { Document, Model, Schema, model } from 'mongoose';
+import {hash, genSalt, compare} from 'bcryptjs';
 
 export interface IUser {
   username: string;
@@ -6,15 +7,19 @@ export interface IUser {
   googleId?: string;
 }
 
-export interface IUserDocument extends IUser, Document {}
+export interface IUserDocument extends IUser, Document {
+
+}
 export interface IUserModel extends Model<IUserDocument> {}
 
 const UserSchema = new Schema(
   {
     username: {
       type: String,
-      unique: true,
-      required: true,
+      trim: true,
+      unique: [true, "Username already exists"],
+      match: [/.+\@.+\..+/, "Please fill a valid email address"],
+      required: [true, "Username is required"]
     },
     password: {
       type: String,
@@ -28,4 +33,10 @@ const UserSchema = new Schema(
   }
 );
 
-export const UserModel = model<IUserDocument>('users', UserSchema);
+//Encrypt Password using Bcrypt
+UserSchema.pre('save', async function (next) {
+  const salt = await genSalt(10);
+  (this as IUserDocument).password = await hash((this as IUserDocument).password, salt);
+})
+
+export const UserModel = model<IUserDocument>('users', UserSchema); 
